[cs-ui] CSDateTimePicker - Fixed datepicker width on smaller screens

--- a/cs-ui-components/src/sass/components/datepicker/_cs-datepicker.scss
+++ b/cs-ui-components/src/sass/components/datepicker/_cs-datepicker.scss
@@ -382,6 +382,10 @@
 	&.cs-datetimepicker {
 		width: var(--datepicker-width, 22rem);
 
+		.react-datepicker {
+			width: max-content;
+		}
+
 		.react-datepicker__header,
 		.react-datepicker__time-container {
 			@include css4 {
